# jupyter_ascending

./: .gitignore  .pnp.cjs  README.md  example.sync.ipynb  example.sync.py  install.json  package.json  pyproject.toml
jupyter-config/: jupyter_ascending.json
jupyter_ascending/: __init__.py  _environment.py  _frontend.py  _version.py  example.sync.ipynb  example.sync.py  extension.py  functional.py  jsonrpc_utils.py  logger.py  utils.py
jupyter_ascending/handlers/: __init__.py  jupyter_notebook.py  server_extension.py
jupyter_ascending/labextension/: __init__.py
jupyter_ascending/nbextension/: __init__.py
jupyter_ascending/nbextension/static/: extension.js
jupyter_ascending/notebook/: merge.py
jupyter_ascending/requests/: client_lib.py  execute.py  execute_all.py  restart.py  sync.py
jupyter_ascending/tests/: test_labextension_path.py
src/: index.ts
