[build-system]
requires = [
  "hatchling>=1.5.0",
  "jupyterlab>=4.0.0,<5.0.0",
  "hatch-nodejs-version",
]
build-backend = "hatchling.build"

[project]
name = "jupyter_ascending"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11,<4.0"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

dependencies = [
"jupytext>=1.14.4",
"jsonrpcserver>=5.0.9",
"jsonrpcclient>=4.0.3",
"loguru>=0.7.3",
"editdistance>=0.8.0",
"jupyter-client>=8.6.0",
"aiohttp>=3.9.5",
"frozenlist>=1.4.1",
"pyzmq>=26.2.0",
"pyyaml>=6.0.2",
"notebook>=7,<8",
"nbclassic>=1.1",
"jupyter_server>=2.17",
"requests>=2.32.5"
]

dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
source = "nodejs"
path = "package.json"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter_ascending/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.hooks.version]
path = "jupyter_ascending/_version.py"

# --- THE JUPYTER-BUILDER HOOK ---
[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured_targets = [
  "jupyter_ascending/labextension/package.json"
]
skip-if-exists = ["jupyter_ascending/labextension/package.json"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_ascending/labextension"

# --- RELEASE TOOLING ---
[tool.jupyter-releaser.hooks]
before-build-npm = [
  "python -m pip install 'jupyterlab>=4.0.0<5'",
  "jlpm",
  "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.poetry]
package-mode = false
